fix: loader and redirect during refreshing user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
         <title>Drone Ordering</title>
     </head>
 
-    <body>
+    <body className="m-0 flex min-h-screen min-w-[20rem] flex-col font-sans">
         <div id="root" class="flex flex-grow flex-col"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
